[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = class_reader
description = Tools for reading CLASS binary files
long_description = Tools for reading CLASS binary files
author = Adam Ginsburg
author_email = adam.g.ginsburg@gmail.com
license = BSD
url = http://github.com/keflavich/class_reader
edit_on_github = True
github_project = keflavich/class_reader
